--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplefolio",
+  "name": "stevenfolio",
   "version": "1.0.1",
   "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cobidev/simplefolio"
+    "url": "git+https://github.com/stevenyeo99/stevenfolio"
   },
   "keywords": [],
-  "author": "Jacobo Martinez",
+  "author": "Steven Yeo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cobidev/simplefolio/issues"
+    "url": "https://github.com/stevenyeo99/stevenfolio/issues"
   },
-  "homepage": "https://github.com/cobidev/simplefolio#readme",
+  "homepage": "https://github.com/stevenyeo99/stevenfolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0",
